# HS-Osnabrueck-Computergrafik-Hausarbeit

./: CMakeLists.txt  Readme.md
CGVStudio/CGVStudio/: CGVStudio.vcxproj  CGVStudio.vcxproj.filters  imgui.ini
CGVStudio/CGVStudio/Release/: CGVStudio.exe.recipe
CGVStudio/CGVStudio/Release/CGVStudio.tlog/: CGVStudio.lastbuildstate  CGVStudio.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CGVStudio/Release/: CGVStudio.ipdb
assets/: skybox.mtl
assets/icons/: source.txt
assets/models/asteroids/: asteroid.c4d  asteroid1.c4d  asteroid1.dae  asteroid10.c4d  asteroid10.dae  asteroid2.c4d  asteroid2.dae  asteroid3.c4d  asteroid3.dae  asteroid4.c4d  asteroid4.dae  asteroid5.c4d  asteroid5.dae  asteroid6.c4d  asteroid6.dae  asteroid7.c4d  asteroid7.dae  asteroid8.c4d  asteroid8.dae  asteroid9.c4d  asteroid9.dae  destroyed.mtl
assets/models/ships/Blaster/: Spaceship.mtl
assets/models/ships/Viper_MK4/: Viper-mk-IV-fighter.mtl
assets/models/stations/Drift/: drift.dae  drift.mtl
assets/shaders/: fsbloom.glsl  fsblur.glsl  fsglow.glsl  fslightdummy.glsl  fsparticle.glsl  fsphong.glsl  voronoi.glsl  vsbloom.glsl  vsblur.glsl  vsglow.glsl  vsparticle.glsl  vsphong.glsl
src/: Aabb.cpp  Aabb.h  Application.cpp  Application.h  Asteroid.cpp  Asteroid.h  BaseModel.cpp  BaseModel.h  BaseShader.h  BloomShader.cpp  BloomShader.h  BlurShader.cpp  BlurShader.h  Camera.cpp  Camera.h  ConstantShader.cpp  ConstantShader.h  Framebuffer.h  GlowShader.cpp  GlowShader.h  IndexBuffer.h  Lights.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleShader.cpp  ParticleShader.h  PhongShader.cpp  PhongShader.h  Player.cpp  Player.h  Resource.h  ShaderHelper.hpp  ShaderLightMapper.cpp  ShaderLightMapper.h  ShadowMapGenerator.cpp  ShadowMapGenerator.h  (+25 more)
